--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,9 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "resolutions": {
+    "@types/react": "^18.2.21"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
